--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -6,6 +6,6 @@
 	<ul>
 		@foreach (Item item in Model)
 		{
-			<li>@item.Description<a asp-action="delete" asp-route-Id="item.Id">delete</a></li>
+			<li>@item.Description<a asp-action="delete" asp-route-Id="@item.Id">delete</a></li>
 		}
 	</ul>
